tests/parser/tests/cases/should_fail/dangling_paren_tree/case.stderr
error: Failed to parse
 --> $DIR/case.hash:3:2
2 |   func_call();
3 |   k(
  |    ^ here
  = note: Encountered unclosed delimiter `(`, add a `)` after the inner expression
